--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,62 @@
     transform: rotate(360deg);
   }
 }
+.outerDiv {
+  margin: auto;
+  max-width: 600px;
+  margin-top: 50px;
+}
+
+.outerDiv ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.outerDiv ul li {
+  padding: 15px;
+  margin: 15px 0;
+  /* Vertical margin for space between items */
+  margin-left: 20px;
+  /* Margin from the left */
+  margin-right: 20px;
+  /* Margin from the right */
+  color: #333;
+  /* Changed text color */
+  background-color: #f4f4f4;
+  /* Softer background color */
+  font-size: 1.2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Added slightly deeper shadow */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color 0.3s ease;
+}
+
+.outerDiv ul li:hover {
+  background-color: #e0e0e0;
+  /* Light grey when hovering */
+}
+
+.outerDiv ul li span {
+  background-color: #e65d5d;
+  padding: 0 10px;
+  border-radius: 35%;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.outerDiv ul li span:hover {
+  background-color: #ff4500;
+}
+.taskcomplete{
+  text-decoration: line-through;
+  color: #ccc;
+  opacity: 0.7;
+  cursor: not-allowed;
+  transition: color 0.3s ease;
+}
